language_tests/source_files/invalid/async_closures.tr
func badAwait() async {
    let f = || async { 1 as int32 }

    let _ = f()
}

func badAwaitTask() async {
    let task = std.task.spawn(|| async { 1 as int32 })

    let _ = await task
}

func badSpawnLocalFirst() async {
    let thunk = || { return 1 as int32 }
    let _ = std.task.spawn(thunk)
}

func badSpawnArg() async {
    let _ = std.task.spawn(|x: int32| async { x })
}

func badSyncTaskValue() {
    let task = std.task.spawn(|| async { 1 as int32 })

    let _ = task.result()
}

func applyReusableAsync[F: AsyncFn(int32) -> int32](_ f: F, _ x: int32) async -> int32 {
    return await f(x)
}

func badCapturingAsyncFnBound() async {
    let captured = 7 as int32
    let closure = |x: int32| async {
        return x + captured
    }

    let _ = await applyReusableAsync(closure, 1)
}
